go/examples/knative-eventing-source/deploy/google-vision-svc/subscription.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: rgwpubsub-svc
  namespace: rgwpubsub
spec:
  runLatest:
    configuration:
      revisionTemplate:
        spec:
          container:
            image: docker.io/rootfs/rgwpubsub-knative-vision
            env:
            - name: S3_ACCESS_KEY_ID
              valueFrom:
                 secretKeyRef:
                    name: rgw-pubsub-secret
                    key: s3id
            - name: S3_SECRET_ACCESS_KEY
              valueFrom:
                 secretKeyRef:
                    name: rgw-pubsub-secret
                    key: s3key
            - name: S3_HOSTNAME
              valueFrom:
                 secretKeyRef:
                    name: rgw-pubsub-secret
                    key: s3host
            - name: GOOGLE_VISION_API_KEY
              valueFrom:
                 secretKeyRef:
                    name: rgw-pubsub-secret
                    key: apikey
