go/examples/knative-eventing-source/deploy/google-vision-svc/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rgwpubsub-source
  namespace: rgwpubsub
spec:
  hosts:
  - "<rgw hostname>"
  - "vision.googleapis.com" # to access google vision
  ports:
  - number: 8001 #rgw pubsub port
    name: http
    protocol: HTTP
  - number: 8000 #rgw port
    name: rgw
    protocol: HTTP
  - number: 443 # https, to access google vision endpoint
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
